# test

./: .gitignore  Makefile  Makefile.am  README  README.md  README.org  autogen.sh  configure.ac  geargen.sh  librdb.c  meson.build  rdb.c  rdb.spec
.gear/: rdb.spec  rules
include/rdb/: rdb.h
po/: Makevars  POTFILES  POTFILES.in  meson.build  rdb.pot  ru.po
src/: Makefile.am  lib.c  main.c
